outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-6894683173256685817_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, uses a different heuristic based on average remaining distances, and applies a step penalty to avoid revisiting nodes in close proximity, creating a balance between immediate gains and long-term tour optimization.}
                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, uses a different heuristic based on average remaining distances, and applies a step penalty to avoid revisiting nodes in close proximity, creating a balance between immediate gains and long-term tour optimization.}
                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
